[package]
name = "generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.58"
heck = "0.3"
itertools = "0.10"
nom = "6.0"
once_cell = "1.8"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
syn = { version = "1.0", features = ["extra-traits"] }
